--- a/src/assets/designSystem/components/molecules/_breadcrumb.scss
+++ b/src/assets/designSystem/components/molecules/_breadcrumb.scss
@@ -1,4 +1,4 @@
 $breadcrumb-padding: 0;
-$breadcrumb-link-color: var(--brand-link-color);
-$breadcrumb-link-hover-color: var(--brand-link-hover-color);
+$breadcrumb-link-color: var(--brand-primary-enabled);
+$breadcrumb-link-hover-color: var(--brand-primary-hover);
 $breadcrumb-separator: '›';
