--- a/src/assets/designSystem/components/organisms/_footer.scss
+++ b/src/assets/designSystem/components/organisms/_footer.scss
@@ -1,6 +1,6 @@
 $footer-padding: 0;
 $footer-bg: var(--brand-secondary-bg-color);
 $footer-color: var(--brand-high-emphasis-text-color);
-$footer-link-color: var(--brand-link-color);
-$footer-link-hover-color: var(--brand-link-hover-color);
+$footer-link-color: var(--brand-primary-enabled);
+$footer-link-hover-color: var(--brand-primary-hover);
 $footer-link-font-weight: $link-font-weight;
