--- a/src/assets/designSystem/_variables.scss
+++ b/src/assets/designSystem/_variables.scss
@@ -8,7 +8,7 @@
 /* Components */
 @import 'components/organisms/accordion';
 @import 'components/organisms/autocomplete';
-@import 'components/atoms/badge';
+@import 'components/data-display/badge';
 @import 'components/molecules/breadcrumb';
 @import 'components/atoms/button';
 @import 'components/organisms/calendar';
