--- a/.vuesion/generators/page/page.vue.hbs
+++ b/.vuesion/generators/page/page.vue.hbs
@@ -5,7 +5,7 @@
 
       <vue-grid-row>
         <vue-grid-item>
-          <vue-text appearance="h1" as="h1">{{ properCase componentName }}</vue-text>
+          <vue-text look="h1" as="h1">{{ properCase componentName }}</vue-text>
         </vue-grid-item>
       </vue-grid-row>
     </vue-grid>
@@ -18,7 +18,7 @@ import VueGrid from '@/components/organisms/VueGrid/VueGrid.vue';
 import VueBreadcrumb from '@/components/molecules/VueBreadcrumb/VueBreadcrumb.vue';
 import VueGridRow from '@/components/organisms/VueGrid/VueGridRow/VueGridRow.vue';
 import VueGridItem from '@/components/organisms/VueGrid/VueGridColumn/VueGridColumn.vue';
-import VueText from '@/components/atoms/VueText/VueText.vue';
+import VueText from '@/components/typography/VueText/VueText.vue';
 
 export default defineComponent({
   name: '{{ properCase componentName }}Page',
