--- a/src/assets/design-system/variables/components/atoms/_button.scss
+++ b/src/assets/design-system/variables/components/atoms/_button.scss
@@ -1,85 +1,66 @@
-@include add-theme-variable(
-  button-color,
-  (
-    'light': var(--brand-high-emphasis-text-color-inverse),
-    'dark': var(--brand-high-emphasis-text-color),
-  )
-);
+// small
+$button-sm-padding: $space-4 $space-12;
+$button-sm-height: $space-24 + $space-4;
 
-$button-padding: 0 $space-16;
+// medium
+$button-md-padding: $space-8 $space-16;
+$button-md-height: $space-32 + $space-4;
+
+// large
+$button-lg-padding: $space-12 $space-24;
+$button-lg-height: $space-40 + $space-4;
+
+// common
 $button-min-width: $space-32;
-$button-height: $space-32;
-$button-border-radius: var(--brand-border-radius-sm);
-$button-disabled-opacity: 0.5;
-$button-border-width: 0.2rem;
-$button-icon-size: $space-24;
+$button-border-radius: $space-8;
+$button-disabled-opacity: 0.3;
+$button-icon-size: $space-20 + $space-2;
 
 // TODO: add new button variations
 $button-variations: (
   'primary': (
     'bg': var(--brand-primary-enabled),
-    'color': var(--button-color),
+    'color': var(--brand-high-emphasis-text-color-inverse),
     'hover-bg': var(--brand-primary-hover),
-    'hover-color': var(--button-color),
+    'hover-color': var(--brand-high-emphasis-text-color-inverse),
     'active-bg': var(--brand-primary-active),
-    'active-color': var(--button-color),
+    'active-color': var(--brand-high-emphasis-text-color-inverse),
     'focus-bg': var(--brand-primary-focus),
-    'focus-color': var(--button-color),
-    'border': $button-border-width solid var(--brand-primary-enabled),
+    'focus-color': var(--brand-high-emphasis-text-color-inverse),
+    'focus-box-shadow-color': var(--brand-primary-focus),
   ),
-  'neutral': (
-    'bg': var(--brand-neutral-enabled),
-    'color': var(--button-color),
-    'hover-bg': var(--brand-neutral-hover),
-    'hover-color': var(--button-color),
-    'active-bg': var(--brand-neutral-active),
-    'active-color': var(--button-color),
-    'focus-bg': var(--brand-neutral-focus),
-    'focus-color': var(--button-color),
-    'border': $button-border-width solid var(--brand-neutral-enabled),
+  'basic': (
+    'bg': palette-color-level('primary', 2),
+    'color': palette-color-level('primary', 7),
+    'hover-bg': palette-color-level('primary', 1),
+    'hover-color': palette-color-level('primary', 7),
+    'active-bg': palette-color-level('primary', 2),
+    'active-color': palette-color-level('primary', 7),
+    'focus-bg': palette-color-level('primary', 2),
+    'focus-color': palette-color-level('primary', 7),
+    'focus-box-shadow-color': var(--brand-primary-focus),
+  ),
+  'outline': (
+    'bg': palette-color-level('neutral', 0),
+    'color': var(--brand-medium-emphasis-text-color),
+    'hover-bg': palette-color-level('neutral', 1),
+    'hover-color': var(--brand-medium-emphasis-text-color),
+    'active-bg': palette-color-level('neutral', 0),
+    'active-color': var(--brand-medium-emphasis-text-color),
+    'focus-bg': palette-color-level('neutral', 0),
+    'focus-color': var(--brand-medium-emphasis-text-color),
+    'focus-box-shadow-color': var(--brand-primary-focus),
+    'border': 1px solid var(--brand-primary-border-color),
   ),
   'danger': (
     'bg': var(--brand-danger-enabled),
-    'color': var(--button-color),
+    'color': var(--brand-high-emphasis-text-color-inverse),
     'hover-bg': var(--brand-danger-hover),
-    'hover-color': var(--button-color),
+    'hover-color': var(--brand-high-emphasis-text-color-inverse),
     'active-bg': var(--brand-danger-active),
-    'active-color': var(--button-color),
+    'active-color': var(--brand-high-emphasis-text-color-inverse),
     'focus-bg': var(--brand-danger-focus),
-    'focus-color': var(--button-color),
-    'border': $button-border-width solid var(--brand-danger-enabled),
-  ),
-  'warning': (
-    'bg': var(--brand-warning-enabled),
-    'color': var(--button-color),
-    'hover-bg': var(--brand-warning-hover),
-    'hover-color': var(--button-color),
-    'active-bg': var(--brand-warning-active),
-    'active-color': var(--button-color),
-    'focus-bg': var(--brand-warning-focus),
-    'focus-color': var(--button-color),
-    'border': $button-border-width solid var(--brand-warning-enabled),
-  ),
-  'success': (
-    'bg': var(--brand-success-enabled),
-    'color': var(--button-color),
-    'hover-bg': var(--brand-success-hover),
-    'hover-color': var(--button-color),
-    'active-bg': var(--brand-success-active),
-    'active-color': var(--button-color),
-    'focus-bg': var(--brand-success-focus),
-    'focus-color': var(--button-color),
-    'border': $button-border-width solid var(--brand-success-enabled),
-  ),
-  'info': (
-    'bg': var(--brand-info-enabled),
-    'color': var(--button-color),
-    'hover-bg': var(--brand-info-hover),
-    'hover-color': var(--button-color),
-    'active-bg': var(--brand-info-active),
-    'active-color': var(--button-color),
-    'focus-bg': var(--brand-info-focus),
-    'focus-color': var(--button-color),
-    'border': $button-border-width solid var(--brand-info-enabled),
+    'focus-color': var(--brand-high-emphasis-text-color-inverse),
+    'focus-box-shadow-color': var(--brand-danger-focus),
   ),
 );
