--- a/src/assets/design-system/variables/components/data-display/_badge.scss
+++ b/src/assets/design-system/variables/components/data-display/_badge.scss
@@ -4,19 +4,19 @@ $badge-border-radius: $space-20;
 
 $badge-variations: (
   'info': (
+    'color': var(--brand-primary-active),
     'bg': var(--brand-primary-focus),
-    'color': var(--brand-primary-enabled),
   ),
   'warning': (
+    'color': var(--brand-warning-active),
     'bg': var(--brand-warning-focus),
-    'color': var(--brand-warning-enabled),
   ),
   'success': (
+    'color': var(--brand-success-active),
     'bg': var(--brand-success-focus),
-    'color': var(--brand-success-enabled),
   ),
   'danger': (
+    'color': var(--brand-danger-active),
     'bg': var(--brand-danger-focus),
-    'color': var(--brand-danger-enabled),
   ),
 );
