--- a/src/assets/design-system/variables/_variables.scss
+++ b/src/assets/design-system/variables/_variables.scss
@@ -19,7 +19,7 @@
 @import 'components/molecules/dropdown-menu';
 @import 'components/organisms/footer';
 @import 'components/atoms/input';
-@import 'components/atoms/loader';
+@import 'components/data-display/loader';
 @import 'components/molecules/modal';
 @import 'components/organisms/nav-bar';
 @import 'components/molecules/notification-stack';
@@ -30,7 +30,7 @@
 @import 'components/atoms/slider';
 @import 'components/organisms/tab-group';
 @import 'components/molecules/tooltip';
-@import 'components/atoms/toggle';
+@import 'components/input-and-actions/toggle';
 @import 'components/atoms/star-rating';
 @import 'components/molecules/back-to-top';
 @import 'components/molecules/pop-over';
