feat(vue-slider): apply re-design, update tests and stories

--- a/src/assets/design-system/variables/_variables.scss
+++ b/src/assets/design-system/variables/_variables.scss
@@ -27,7 +27,7 @@
 @import 'components/molecules/card';
 @import 'components/atoms/select';
 @import 'components/organisms/sidebar';
-@import 'components/atoms/slider';
+@import 'components/input-and-actions/slider';
 @import 'components/organisms/tab-group';
 @import 'components/molecules/tooltip';
 @import 'components/input-and-actions/toggle';
