feat(vue-input): apply re-design, update tests and stories

--- a/src/assets/design-system/variables/_variables.scss
+++ b/src/assets/design-system/variables/_variables.scss
@@ -18,7 +18,7 @@
 @import 'components/organisms/data-table';
 @import 'components/molecules/dropdown-menu';
 @import 'components/organisms/footer';
-@import 'components/atoms/input';
+@import 'components/input-and-actions/input';
 @import 'components/data-display/loader';
 @import 'components/molecules/modal';
 @import 'components/organisms/nav-bar';
