feat(vue-textarea): apply re-design, update tests and stories

--- a/src/assets/design-system/variables/_variables.scss
+++ b/src/assets/design-system/variables/_variables.scss
@@ -19,6 +19,7 @@
 @import 'components/molecules/dropdown-menu';
 @import 'components/organisms/footer';
 @import 'components/input-and-actions/input';
+@import 'components/input-and-actions/textarea';
 @import 'components/data-display/loader';
 @import 'components/molecules/modal';
 @import 'components/organisms/nav-bar';
