--- a/src/assets/design-system/variables/components/input-and-actions/_input.scss
+++ b/src/assets/design-system/variables/components/input-and-actions/_input.scss
@@ -5,15 +5,15 @@ $input-label-gap: $space-4;
 // input default
 $input-border-radius: $space-8;
 $input-border: 1px solid var(--brand-primary-border-color);
-$input-height: $space-40;
+$input-height: auto;
 $input-padding: ($space-12 - $space-2) $space-12;
 $input-color: var(--brand-high-emphasis-text-color);
-$input-placeholder-color: var(--brand-medium-emphasis-text-color);
+$input-placeholder-color: var(--brand-low-emphasis-text-color);
 $input-background-color: transparent;
 $input-font-family: $font-family;
 $input-font-size: $text-1;
 $input-font-weight: $font-weight-regular;
-$input-line-height: $line-height-2;
+$input-line-height: $line-height-1 + $space-2;
 
 // description
 $input-description-gap: $space-8;
