--- a/src/assets/design-system/variables/_variables.scss
+++ b/src/assets/design-system/variables/_variables.scss
@@ -35,3 +35,4 @@
 @import 'components/atoms/star-rating';
 @import 'components/molecules/back-to-top';
 @import 'components/molecules/pop-over';
+@import 'components/data-display/menu';
