--- a/src/assets/design-system/variables/_spacings.scss
+++ b/src/assets/design-system/variables/_spacings.scss
@@ -5,6 +5,7 @@ $space-unit: 0.8rem;
 $space-2: $space-unit * 0.25; //   2px
 $space-4: $space-unit * 0.5; //    4px
 $space-8: $space-unit; //          8px
+$space-10: $space-unit * 1.25; // 10px
 $space-12: $space-unit * 1.5; //  12px
 $space-16: $space-unit * 2; //    16px
 $space-20: $space-unit * 2.5; //  20px
@@ -27,6 +28,7 @@ $spacings: (
   '2': $space-2,
   '4': $space-4,
   '8': $space-8,
+  '10': $space-10,
   '12': $space-12,
   '16': $space-16,
   '20': $space-20,
