feat(vue-select): apply re-design, update tests and stories

--- a/src/assets/design-system/variables/_variables.scss
+++ b/src/assets/design-system/variables/_variables.scss
@@ -26,7 +26,7 @@
 @import 'components/molecules/notification-stack';
 @import 'components/molecules/pagination';
 @import 'components/molecules/card';
-@import 'components/atoms/select';
+@import 'components/input-and-actions/select';
 @import 'components/organisms/sidebar';
 @import 'components/input-and-actions/slider';
 @import 'components/organisms/tab-group';
