--- a/src/assets/design-system/variables/components/input-and-actions/_button.scss
+++ b/src/assets/design-system/variables/components/input-and-actions/_button.scss
@@ -1,20 +1,24 @@
 // small
 $button-sm-padding: $space-4 $space-12;
 $button-sm-height: $space-24 + $space-4;
+$button-sm-has-icon-space: $space-8;
 
 // medium
 $button-md-padding: $space-8 $space-16;
 $button-md-height: $space-32 + $space-4;
+$button-md-has-icon-space: $space-12;
 
 // large
 $button-lg-padding: $space-12 $space-24;
 $button-lg-height: $space-40 + $space-4;
+$button-lg-has-icon-space: $space-16;
 
 // common
 $button-min-width: $space-32;
 $button-border-radius: $space-8;
 $button-disabled-opacity: 0.3;
-$button-icon-size: $space-20 + $space-2;
+$button-icon-size: $space-24;
+$button-icon-gap: $space-4;
 
 $button-variations: (
   'primary': (
