feat(vue-back-to-top): apply re-design, update tests and stories

--- a/src/assets/design-system/themes/dark.scss
+++ b/src/assets/design-system/themes/dark.scss
@@ -1,3 +1,4 @@
+// TODO: update based on light theme
 :root.dark {
   /* Brand Variations */
   --brand-primary: #{palette-color-level('primary', 6)};
