--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -65,7 +65,7 @@ img:not([alt]) {
   left: 0;
   width: 100%;
   height: 100%;
-  background: var(--brand-primary-bg-color);
+  background: rgba(0, 0, 0, 0.5);
   opacity: 0;
   transition: var(--brand-fade-animation-transition);
   z-index: -1;
