--- a/.vuesion/generators/page/page.vue.hbs
+++ b/.vuesion/generators/page/page.vue.hbs
@@ -1,32 +1,30 @@
 <template>
-  <div :class="$style.{{ camelCase componentName }}">
-    <vue-grid>
-      <vue-breadcrumb :items="breadCrumbItems" />
+  <vue-content-block :class="$style.{{ camelCase componentName }}">
+    <vue-box :padding="['24 16', '24 16', 24, 32]">
+      <vue-stack :space="[16, 16, 24, 32]">
+        <vue-breadcrumb :items="breadCrumbItems" />
 
-      <vue-grid-row>
-        <vue-grid-item>
-          <vue-text look="h1" as="h1">{{ properCase componentName }}</vue-text>
-        </vue-grid-item>
-      </vue-grid-row>
-    </vue-grid>
-  </div>
+        <vue-text look="h1" as="h1">{{ properCase componentName }}</vue-text>
+      </vue-stack>
+    </vue-box>
+  </vue-content-block>
 </template>
 
 <script lang="ts">
 import { computed, defineComponent, useContext, useMeta } from '@nuxtjs/composition-api';
-import VueGrid from '@/components/organisms/VueGrid/VueGrid.vue';
+import VueContentBlock from '@/components/layout/VueContentBlock/VueContentBlock.vue';
+import VueBox from '@/components/layout/VueBox/VueBox.vue';
+import VueStack from '@/components/layout/VueStack/VueStack.vue';
 import VueBreadcrumb from '@/components/navigation/VueBreadcrumb/VueBreadcrumb.vue';
-import VueGridRow from '@/components/organisms/VueGrid/VueGridRow/VueGridRow.vue';
-import VueGridItem from '@/components/organisms/VueGrid/VueGridColumn/VueGridColumn.vue';
 import VueText from '@/components/typography/VueText/VueText.vue';
 
 export default defineComponent({
   name: '{{ properCase componentName }}Page',
   components: {
-    VueGrid,
+    VueContentBlock,
+    VueBox,
+    VueStack,
     VueBreadcrumb,
-    VueGridRow,
-    VueGridItem,
     VueText,
   },
   setup() {
@@ -50,6 +48,5 @@ export default defineComponent({
 
 .{{ camelCase componentName }} {
   margin-top: $nav-bar-height;
-  min-height: 500px;
 }
 </style>
