feat: optimize stories for mobile viewport

--- a/src/assets/design-system/variables/components/input-and-actions/_button.scss
+++ b/src/assets/design-system/variables/components/input-and-actions/_button.scss
@@ -5,7 +5,7 @@ $button-sm-has-icon-space: $space-8;
 
 // medium
 $button-md-padding: $space-8 $space-16;
-$button-md-height: $space-32 + $space-4;
+$button-md-height: $space-40;
 $button-md-has-icon-space: $space-12;
 
 // large
