feat(vue-tooltip): apply re-design, update tests and stories

--- a/src/assets/design-system/mixins/_mixins.scss
+++ b/src/assets/design-system/mixins/_mixins.scss
@@ -57,6 +57,19 @@ $grid-breakpoints-max: (
   }
 }
 
+/**
+ USAGE:
+
+ @include add-theme-variable(
+  variable-name,
+  (
+    'theme-name-1': value,
+    'theme-name-2': value,
+  )
+);
+
+ */
+
 @mixin add-theme-variable($variable-name, $value-map) {
   @each $theme, $value in $value-map {
     :root.#{$theme} {
