feat(vue-avatar): apply re-design, update tests and stories

--- a/src/assets/design-system/variables/_variables.scss
+++ b/src/assets/design-system/variables/_variables.scss
@@ -36,3 +36,4 @@
 @import 'components/behavior/back-to-top';
 @import 'components/premium/pop-over';
 @import 'components/data-display/menu';
+@import 'components/data-display/avatar';
