--- a/src/assets/design-system/variables/components/data-display/_notification-stack.scss
+++ b/src/assets/design-system/variables/components/data-display/_notification-stack.scss
@@ -1,5 +1,5 @@
 $toast-position-left: unset;
-$toast-position-top: $nav-bar-height;
+$toast-position-top: $navbar-height;
 $toast-position-right: $space-16;
 $toast-position-bottom: unset;
 $toast-index: 9999;
